# 2026OpticsMoE

./: .gitignore  面向车载安全的光学MoE感前计算方案.docx  预算.docx
opticalmoe/: FOUR_EXPERT_MOE_TRAINING_NOTES.md  FOUR_EXPERT_PROMPT_ARCHITECTURE.md  LINUX_SERVER_SETUP.md  MULTITASK_AND_CONTROL_EXPERIMENTS.md  OPTICAL_MOE_USAGE.md  README.md  pyproject.toml  requirements-linux.txt  slm_bmp.py  weekly_progress_opticalmoe_2026-06-02.md
opticalmoe/configs/: fashionmnist_donn.yaml  four_expert_moe_cifar10.yaml  four_expert_moe_emnist.yaml  four_expert_moe_fashionmnist.yaml  four_expert_moe_mnist.yaml  four_expert_moe_multitask_mnist_fashion.yaml  four_expert_moe_multitask_mnist_fashion_emnist.yaml  mnist_donn.yaml  mnist_donn_smoke.yaml  multitask_5000_5000_13000_phase_bypass_dropout.yaml  nine_expert_as_global_router_fair134_1000_multitask_dsprites_shape_scale.yaml  nine_expert_as_global_router_fair134_1000_multitask_dsprites_shape_scale_phase_dropout_p10.yaml  nine_expert_as_global_router_fair134_1000_multitask_mnist_fashion_emnist.yaml  optical_moe_bank.yaml  optical_moe_eval_mixed_assembled.yaml  optical_moe_eval_mnist_migrated.yaml  optical_moe_eval_task_fashion_right.yaml  optical_moe_eval_task_mnist_left.yaml  optical_moe_finetune_fashion_right_all_side.yaml  optical_moe_finetune_mnist_left_all_side.yaml  optical_moe_train_mnist_left_debug.yaml  six_layer_control_fashionmnist.yaml  six_layer_control_mnist.yaml
opticalmoe/d2nn_baseline_mnist256/: COMMANDS.md  README.md  config.yaml  data.py  evaluate.py  model.py  optics.py  train_d2nn_mnist256.py  visualization.py
(+1075 files in other folders)
