[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "opticalmoe"
version = "0.1.0"
description = "Research framework for diffractive optical neural networks."
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "matplotlib",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
